--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
     "keywords": ["queue","email","background"],
     "homepage": "http://github.com/taq/delayedmail",
     "license": "GPL",
+    "version": "1.0.2",
     "authors": [
         {
             "name": "Eustaquio Rangel",
